[workspace]
members = [
  "services",
  "testutils",
  "fetcher-core"
  ]
resolver = "2"

[workspace.dependencies]
getset = "0.1.3"
hex = "0.4.3"
http = "1.1.0"
json = "0.12.4"
portpicker = "0.1.1"
reqwest = "0.12.11"
serde_json = "1.0.132"
sha2 = "0.10.8"
tempfile = "3.13.0"
thiserror = "1.0.64"
tokio = "1.42.0"
tokio-stream = "0.1.16"
tonic = "0.12.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.15"

zcash_client_backend = { version = "0.18.0" , features = ["lightwalletd-tonic", "orchard", "transparent-inputs"] }
zcash_primitives = "0.22.0"
zcash_protocol = "0.5.1"

zebra-chain = { git = "https://github.com/ZcashFoundation/zebra.git", tag = "v2.3.0" }
zebra-node-services = { git = "https://github.com/ZcashFoundation/zebra.git", tag = "v2.3.0" }
zebra-rpc = { git = "https://github.com/ZcashFoundation/zebra.git", tag = "v2.3.0" }
zebra-network = { git = "https://github.com/ZcashFoundation/zebra.git", tag = "v2.3.0" }

zingo-netutils = { git = "https://github.com/zingolabs/zingolib.git", tag = "2.0.0-beta2" }
zingolib = { git = "https://github.com/zingolabs/zingolib.git", tag = "2.0.0-beta2" }
testvectors = { git = "https://github.com/zingolabs/zingolib.git", tag = "2.0.0-beta2" }

zingo-infra-fetcher-core = { path = "fetcher-core" }
zingo-infra-services = { path = "services" }
